# Opendrive-Clipboard

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BOUNDARY.md  DEPLOYMENT.md  DEVPOST_SUBMISSION.md  DOMAIN_CUTOVER.md  ENGINEERING_PLAN.md  FULL_BEACON_ARCHITECTURE.md  JUDGING.md  PRODUCT_BRIEF.md  SUBMISSION_PLAN.md  UI_STYLING.md
opendrive_clipboard/: __init__.py  agent.py  beacon_demo.py  demo_data.py  dol_sheet.py  grader.py  server.py  store.py  tools.py  tts.py
scripts/: deploy_cloud_run.sh  deploy_cloud_run_preview.sh  run_demo.sh
tests/: test_dol_sheet.py  test_grader.py  test_server.py  test_workflow.py
web/: app.js  drive-sheet.html  drive-sheet.js  index.html  site.webmanifest  styles.css
